force-app/main/default/objects/Contact_Home__dll/fields/Campagne_emailing_c__c.field-meta.xml
<CustomField>
    <fullName>Campagne_emailing_c__c</fullName>
    <label>Campagne emailing</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Campagne_emailing_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>