force-app/main/default/objects/Contact_Home__dll/fields/Date_Heure_soumission_formulaire_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_soumission_formulaire_c__c</fullName>
    <label>Date/Heure de la dernière demande Web</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Date_Heure_soumission_formulaire_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>