force-app/main/default/objects/Contact_Home__dll/fields/Facture_devis_4_c__c.field-meta.xml
<CustomField>
    <fullName>Facture_devis_4_c__c</fullName>
    <label>Facture devis 4</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Facture_devis_4_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Url</type>
</CustomField>