force-app/main/default/objects/Contact_Home__dll/fields/pi_utm_campaign_c__c.field-meta.xml
<CustomField>
    <fullName>pi_utm_campaign_c__c</fullName>
    <label>Google Analytics Campaign</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>pi_utm_campaign_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>