force-app/main/default/objects/Contact_Home__dll/fields/Responsable_achat_groupe_c__c.field-meta.xml
<CustomField>
    <fullName>Responsable_achat_groupe_c__c</fullName>
    <label>Responsable de l&apos;achat groupé</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Responsable_achat_groupe_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>