force-app/main/default/objects/Contact_Home__dll/fields/Societe_owner_c__c.field-meta.xml
<CustomField>
    <fullName>Societe_owner_c__c</fullName>
    <label>Société du owner</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Societe_owner_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>