force-app/main/default/objects/Contact_Home__dll/fields/TECH_AccountLastModifiedDate_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_AccountLastModifiedDate_c__c</fullName>
    <label>TECH_AccountLastModifiedDate</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>TECH_AccountLastModifiedDate_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Date</type>
</CustomField>